# satellite_landscape_classifier_system

./: LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
notebooks/: main.ipynb
references/model/: hyperparameters.md  model_summary.md
satellite_landscape_classifier/: data_generator.py  model.py  plot.py  predict.py  train.py
